@@ -5,6 +5,7 @@ import com.gmail.nossr50.datatypes.database.DatabaseType;
 import com.gmail.nossr50.datatypes.database.PlayerStat;
 import com.gmail.nossr50.datatypes.player.PlayerProfile;
 import com.gmail.nossr50.datatypes.skills.PrimarySkillType;
+import com.gmail.nossr50.mcMMO;
 
 import java.util.List;
 import java.util.Map;
@@ -12,7 +13,7 @@ import java.util.UUID;
 
 public interface DatabaseManager {
     // One month in milliseconds
-    public final long PURGE_TIME = 2630000000L * MainConfig.getInstance().getOldUsersCutoff();
+    public final long PURGE_TIME = 2630000000L * mcMMO.getDatabaseCleaningSettings().getOldUserCutoffMonths();
     // During convertUsers, how often to output a status
     public final int progressInterval = 200;
 
